--- a/assets/theme.js.liquid
+++ b/assets/theme.js.liquid
@@ -2512,11 +2512,11 @@ theme.fitNav = function() {
       }
     });
 
-    if (navItemWidth > navWidth) {
-      theme.cache.$siteNav.addClass('site-nav--compress');
-    } else {
-      theme.cache.$siteNav.removeClass('site-nav--compress');
-    }
+    // if (navItemWidth > navWidth) {
+    //   theme.cache.$siteNav.addClass('site-nav--compress');
+    // } else {
+    //   theme.cache.$siteNav.removeClass('site-nav--compress');
+    // }
 
     theme.cache.$siteNav.addClass('site-nav--init');
   }
