--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -2698,6 +2698,10 @@ $slick-opacity-not-active: 0.25;
 .site-nav {
   white-space: nowrap;
   opacity: 0;
+  width: 100%;
+  text-align: center;
+  @include display-flexbox();
+  @include justify-content(space-between);
 
   .no-js &,
   &.site-nav--init {
@@ -3778,4 +3782,5 @@ button.mfp-arrow {
   }
 }
 
+/*================ Custom Pierce & Ward ================*/
 
