--- a/assets/timber.scss.liquid
+++ b/assets/timber.scss.liquid
@@ -2332,7 +2332,7 @@ $socialIconFontStack: 'icons';
 
 /*================ Module | Site Header ================*/
 .site-header {
-  padding: ($gutter / 2) 0 0;
+  padding: 20px 0;
   background-color: #ffffff;
 
   .grid--table {
