--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -49,6 +49,9 @@
     };
   </script>
 
+  <!-- Font Awesome ================================================== -->
+  <script src="https://use.fontawesome.com/7a6365e5d6.js"></script>
+
   <!--[if (gt IE 9)|!(IE)]><!--><script src="{{ 'lazysizes.min.js' | asset_url }}" async="async"></script><!--<![endif]-->
   <!--[if lte IE 9]><script src="{{ 'lazysizes.min.js' | asset_url }}"></script><![endif]-->
 
