--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -2696,6 +2696,7 @@ $slick-opacity-not-active: 0.25;
 
 /*================ Nav Links ================*/
 .site-nav {
+  background-color: #ffffff;
   white-space: nowrap;
   opacity: 0;
   text-align: center;
@@ -2703,9 +2704,25 @@ $slick-opacity-not-active: 0.25;
   @include justify-content(space-between);
   @include flex(1 1 50%);
   align-items: center;
-  font-size: 21px;
+  font-size: 16px;
   @include at-query($max, $medium) {
     @include justify-content(center);
+    @include flex-direction(column);
+    margin: 0 auto;
+    width:100%;
+    height:100%;
+    overflow:scroll;
+    -webkit-overflow-scrolling:touch;
+    position:fixed;
+    z-index:4;
+    left:0px;
+    top:-100%;
+    transform:translateY(0%);
+    transition:450ms ease-in-out;
+    background-color: rbga(0, 0, 0, 0.5);
+    &.visible {
+      transform:translateY(100%);
+    }
   }
 
   .no-js &,
@@ -2719,9 +2736,9 @@ $slick-opacity-not-active: 0.25;
   white-space: normal;
 }
 
-.site-nav__item:not(.logo) {
+.site-nav__item {
   @include at-query($max, $medium) {
-    display: none;
+    
   }
 }
 
@@ -3797,6 +3814,10 @@ button.mfp-arrow {
 .nav-wrapper {
   @include display-flexbox();
   @include justify-content(space-between);
+  @include at-query($max, $medium) {
+    @include flex-direction(column);
+    // padding: 0 0 10px 0;
+  }
 }
 
 .list-group {
@@ -3805,8 +3826,40 @@ button.mfp-arrow {
 
 .search-cart-nav {
   text-align: right;
+  @include at-query($max, $medium) {
+    position: absolute;
+    top: 10px;
+    right: $gutter;
+  }
 }
 
 .fa {
   font-size: 16px !important;
+}
+
+.mobile-logo {
+  display: none;
+  @include at-query($max, $medium) {
+    display: block;
+    z-index: 5;
+  }
+}
+
+.desktop-logo {
+  @include at-query($max, $medium) {
+    display: none;
+  }
+}
+
+.social-nav {
+  @include at-query($max, $medium) {
+    text-align: center;
+    padding-top: 10px;
+  }
+}
+
+.hide-medium-down {
+  @include at-query($max, $medium) {
+    display: none;
+  }
 }
