pw-nav figuring more shiz out

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -106,7 +106,7 @@
 
     {% section 'header' %}
 
-    {% if template.name == "index" %}
+    {% if template.name == "index" or template.name == "home" %}
       {% section 'slideshow' %}
     {% endif %}
 
