pw-nav: landing page overlay and logo

--- a/assets/pw.js.liquid
+++ b/assets/pw.js.liquid
@@ -60,6 +60,10 @@ var myAppJavaScript = function($){
           navOpen = false;
       }
   })
+
+  $('.muted-overlay').click(function() {
+      window.location.href = "/pages/home";
+    })
 };
 
 /* If jQuery has not yet been loaded or if it has but it's too old for our needs,
