--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -3832,7 +3832,7 @@ button.mfp-arrow {
   }
 }
 
-.fa {
+.fa-nav {
   font-size: 16px !important;
 }
 
@@ -3863,4 +3863,35 @@ button.mfp-arrow {
   @include at-query($max, $medium) {
     display: none;
   }
+}
+
+#shopify-section-branded-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  z-index: 10;
+  img {
+    width: 300px;
+    z-index: 11;
+  }
+  .social-nav {
+    height: 100%;
+    display: flex;
+    align-items: flex-end;
+    padding-bottom: 50px;
+    z-index: 11;
+  }
+}
+
+.muted-overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: white;
+  opacity: .2;
+  cursor: pointer;
 }
