pw-nav: multiple slideshows working

--- a/sections/home.liquid
+++ b/sections/home.liquid
@@ -3,8 +3,8 @@
   <div class="grid-item" {{ block.shopify_attributes }}>
     {% case block.type %}
 
-      {% when 'slideshow-home' %}
-      {% include 'snippet_slideshow-home' %}
+      {% when 'slide' %}
+      {% include 'slideshow-home' %}
 
     {% endcase %}
   </div>
