pw: landing page wrap up

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -2152,7 +2152,7 @@ $shareCountBg: $colorBody;
     height: 100%;
     width: 100%;
     object-fit: cover;
-    object-position: 100% 30%;
+    object-position: 50% 50%;
     // Used for the IE lazysizes object-fit polyfill
     font-family: "object-fit: cover";
 
@@ -3877,6 +3877,7 @@ button.mfp-arrow {
   img {
     width: 300px;
     z-index: 11;
+    margin-top: 25px;
   }
   .social-nav {
     height: 100%;
@@ -3894,4 +3895,8 @@ button.mfp-arrow {
   background-color: white;
   opacity: .2;
   cursor: pointer;
+}
+
+.hero-slideshow-landing .slick-dots {
+  opacity: 0;
 }
