pwn-nav: some portfolio work

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -71,7 +71,7 @@
           </div>
           <ul class="site-nav" id="AccessibleNav">
             <li class="site-nav__item site-nav__expanded-item{% unless template.name == 'index' %}{% if link.active %} site-nav--active{% endif %}{% endunless%}">
-              <a href="{{ link.url }}" class="site-nav__link">Portfolio</a>
+              <a href="/pages/portfolio" class="site-nav__link">Portfolio</a>
             <li class="site-nav__item site-nav__expanded-item{% unless template.name == 'index' %}{% if link.active %} site-nav--active{% endif %}{% endunless%}">
               <a href="/products" class="site-nav__link">Shop</a>
             </li>
