--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -95,7 +95,7 @@
 
     {% unless template.name == "index" %}
       <main class="main-content" role="main">
-        {% unless template == "collection.image" or template.suffix == "home" %}
+        {% unless template == "collection.image" or template.suffix == "home" or template.suffix == "portfolio" %}
           <div class="wrapper">
         {% endunless %}
           {{ content_for_layout }}
@@ -103,7 +103,7 @@
           </div>
         {% endunless %}
       </main>
-      {% unless template.suffix == "home" %}
+      {% unless template.suffix == "home" or template.suffix == "portfolio" %}
         <hr class="hr--large">
         {% section 'footer' %}
       {% endunless %}
