--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,6 +1,6 @@
 <style>
   .site-header__logo img {
-    max-width: {{ section.settings.logo_max_width | escape | default: '180' | remove: 'px' | append: 'px' }};
+    max-width: {{ section.settings.logo_max_width | escape | default: '80' | remove: 'px' | append: 'px' }};
   }
 
   @media screen and (max-width: 768px) {
@@ -56,167 +56,53 @@
 
     <header class="site-header" role="banner">
       <div class="wrapper">
-        <div class="grid--full grid--table">
-          <div class="grid__item large--hide one-quarter">
-            <div class="site-nav--mobile">
-              <button type="button" class="icon-fallback-text site-nav__link js-drawer-open-left" aria-controls="NavDrawer">
-                <span class="icon icon-hamburger" aria-hidden="true"></span>
-                <span class="fallback-text">{{ 'general.drawers.navigation' | t }}</span>
-              </button>
-            </div>
+        <div class="nav-wrapper desktop-nav-wrapper">
+          <div class="list-group social-nav hide-medium-down">
+            <a class="list-group-item" href="#"><i class="fa fa-instagram fa-fw fa-nav" aria-hidden="true"></i></a>
+            <a class="list-group-item" href="#"><i class="fa fa-pinterest-p fa-fw fa-nav" aria-hidden="true"></i></a>
+            <a class="list-group-item" href="#"><i class="fa fa-envelope-o fa-fw fa-nav" aria-hidden="true"></i></a>
           </div>
-          <div class="grid__item large--one-third medium-down--one-half">
+          <!-- begin main-nav -->
+          <div class="logo mobile-logo site-nav__item site-nav__expanded-item{% unless template.name == 'index' %}{% if link.active %} site-nav--active{% endif %}{% endunless%}">
+            <h1 class="site-header__logo" itemscope itemtype="http://schema.org/Organization">
+              <img src="{{ section.settings.logo | img_url: image_size }}" srcset="{{ section.settings.logo | img_url: image_size }} 1x, {{ section.settings.logo | img_url: image_size, scale: 2 }} 2x" alt="{{ section.settings.logo.alt | default: shop.name }}"
+              itemprop="logo">
+            </h1>
           </div>
-          <div class="grid__item large--one-third medium-down--one-half text-center">
-            {% comment %}
-              Use the uploaded logo from theme settings if enabled.
-              Site name gets precedence with H1 tag on homepage, div on other pages.
-            {% endcomment %}
-            {% if template.name == 'index' %}
+          <ul class="site-nav" id="AccessibleNav">
+            <li class="site-nav__item site-nav__expanded-item{% unless template.name == 'index' %}{% if link.active %} site-nav--active{% endif %}{% endunless%}">
+              <a href="/pages/portfolio" class="site-nav__link">Portfolio</a>
+            <li class="site-nav__item site-nav__expanded-item{% unless template.name == 'index' %}{% if link.active %} site-nav--active{% endif %}{% endunless%}">
+              <a href="/products" class="site-nav__link">Shop</a>
+            </li>
+            <li class="logo desktop-logo site-nav__item site-nav__expanded-item{% unless template.name == 'index' %}{% if link.active %} site-nav--active{% endif %}{% endunless%}">
               <h1 class="site-header__logo" itemscope itemtype="http://schema.org/Organization">
-            {% else %}
-              <div class="h1 site-header__logo" itemscope itemtype="http://schema.org/Organization">
-            {% endif %}
-              {% if section.settings.logo %}
-                {% comment %}
-                  .logo--has-inverted is only applied to the default logo if the inverted logo exists. That way it'll only be hidden on the slider when it has a backup.
-                {% endcomment %}
-                <a href="/" itemprop="url" class="site-header__logo-link{% if section.settings.logo-inverted %} logo--has-inverted{% endif %}">
-                  {% if section.settings.logo_max_width != empty %}
-                    {% capture image_size %}{{ section.settings.logo_max_width | escape }}x{% endcapture %}
-                  {% else %}
-                    {% assign image_size = "180x" %}
-                  {% endif %}
-                   <img src="{{ section.settings.logo | img_url: image_size }}"
-                   srcset="{{ section.settings.logo | img_url: image_size }} 1x, {{ section.settings.logo | img_url: image_size, scale: 2 }} 2x"
-                   alt="{{ section.settings.logo.alt | default: shop.name }}"
-                   itemprop="logo">
+                <a href="/pages/homehtml" itemprop="url" class="site-header__logo-link{% if section.settings.logo-inverted %} logo--has-inverted{% endif %}">
+                  <img src="{{ section.settings.logo | img_url: image_size }}" srcset="{{ section.settings.logo | img_url: image_size }} 1x, {{ section.settings.logo | img_url: image_size, scale: 2 }} 2x" alt="{{ section.settings.logo.alt | default: shop.name }}"
+                  itemprop="logo">
                 </a>
-                {% if section.settings.logo-inverted %}
-                  <a href="/" itemprop="url" class="logo--inverted">
-                    <img src="{{ section.settings.logo-inverted | img_url: image_size }}"
-                    srcset="{{ section.settings.logo-inverted | img_url: image_size }} 1x, {{ section.settings.logo-inverted | img_url: image_size, scale: 2 }} 2x"
-                    alt="{{ section.settings.logo-inverted.alt | default: shop.name }}"
-                    itemprop="logo">
-                  </a>
-                {% endif %}
-              {% else %}
-                <a href="/" itemprop="url">{{ shop.name }}</a>
-              {% endif %}
-            {% if template.name == 'index' %}
               </h1>
-            {% else %}
+            </li>
+            <li class="site-nav__item site-nav__expanded-item{% unless template.name == 'index' %}{% if link.active %} site-nav--active{% endif %}{% endunless%}">
+              <a href="{{ link.url }}" class="site-nav__link">Press</a>
+            </li>
+            <li class="site-nav__item site-nav__expanded-item{% unless template.name == 'index' %}{% if link.active %} site-nav--active{% endif %}{% endunless%}">
+              <a href="{{ link.url }}" class="site-nav__link">About</a>
+            </li>
+            <li class="site-nav__item site-nav__expanded-item{% unless template.name == 'index' %}{% if link.active %} site-nav--active{% endif %}{% endunless%}">
+              <div class="list-group social-nav mobile-social-nav">
+                <a class="list-group-item" href="#"><i class="fa fa-instagram fa-fw" aria-hidden="true"></i></a>
+                <a class="list-group-item" href="#"><i class="fa fa-pinterest-p fa-fw" aria-hidden="true"></i></a>
+                <a class="list-group-item" href="#"><i class="fa fa-envelope-o fa-fw" aria-hidden="true"></i></a>
               </div>
-            {% endif %}
-          </div>
-          <div class="grid__item large--one-third large--text-right medium-down--hide">
-            {% comment %}
-              List out your main-menu linklist (default)
-
-              More info on linklists:
-                - http://docs.shopify.com/themes/liquid-variables/linklists
-            {% endcomment %}
-            <!-- begin site-nav -->
-            <ul class="site-nav" id="AccessibleNav">
-              {% if section.settings.search == "box" %}
-              <li class="site-nav__item site-nav--search__bar medium-down--hide ">
-                {% include 'search-bar', search_btn_style: 'btn', search_bar_location: 'search-bar--header' %}
-              </li>
-              {% endif %}
-
-              <li class="site-nav__item site-nav--compress__menu">
-                <button type="button" class="icon-fallback-text site-nav__link site-nav__link--icon js-drawer-open-left" aria-controls="NavDrawer">
-                  <span class="icon icon-hamburger" aria-hidden="true"></span>
-                  <span class="fallback-text">{{ 'general.drawers.navigation' | t }}</span>
-                </button>
-              </li>
-              {% for link in linklists[section.settings.main_menu_link_list].links %}
-                {% comment %}
-                  Create a dropdown menu by naming a linklist the same as a link in the parent nav
-
-                  More info on dropdowns:
-                    - http://docs.shopify.com/manual/your-website/navigation/create-drop-down-menu
-                {% endcomment %}
-                {% assign child_list_handle = link.title | handleize %}
-                {% if linklists[child_list_handle].links != blank %}
-                  <li class="site-nav__item site-nav__expanded-item site-nav--has-dropdown{% unless template.name == 'index' %}{% if link.active %} site-nav--active{% endif %}{% endunless%}" aria-haspopup="true">
-                    <a href="{{ link.url }}" class="site-nav__link">
-                      {{ link.title }}
-                      <span class="icon icon-arrow-down" aria-hidden="true"></span>
-                    </a>
-                    <ul class="site-nav__dropdown text-left">
-                      {% for childlink in linklists[child_list_handle].links %}
-                        <li{% if childlink.active %} class="site-nav--active"{% endif %}>
-                          <a href="{{ childlink.url }}" class="site-nav__dropdown-link">{{ childlink.title | escape }}</a>
-                        </li>
-                      {% endfor %}
-                    </ul>
-                  </li>
-                {% else %}
-                  <li class="site-nav__item site-nav__expanded-item{% unless template.name == 'index' %}{% if link.active %} site-nav--active{% endif %}{% endunless%}">
-                    <a href="{{ link.url }}" class="site-nav__link">{{ link.title }}</a>
-                  </li>
-                {% endif %}
-              {% endfor %}
-
-              {% if shop.customer_accounts_enabled %}
-                <li class="site-nav__item site-nav__expanded-item">
-                  <a class="site-nav__link site-nav__link--icon" href="/account">
-                    <span class="icon-fallback-text">
-                      <span class="icon icon-customer" aria-hidden="true"></span>
-                      <span class="fallback-text">
-                        {% if customer %}
-                          {{ 'layout.customer.account' | t }}
-                        {% else %}
-                          {{ 'layout.customer.log_in' | t }}
-                        {% endif %}
-                      </span>
-                    </span>
-                  </a>
-                </li>
-              {% endif %}
-
-              {% if section.settings.search == 'page' or section.settings.search == 'modal' %}
-                {% assign search_modal = true %}
-                {% if section.settings.search == 'page' %}
-                  {% assign search_modal = false %}
-                {% endif %}
-                <li class="site-nav__item">
-                  <a href="/search" class="site-nav__link site-nav__link--icon{% if search_modal %} js-toggle-search-modal{% endif %}" data-mfp-src="#SearchModal">
-                    <span class="icon-fallback-text">
-                      <span class="icon icon-search" aria-hidden="true"></span>
-                      <span class="fallback-text">{{ 'general.search.title' | t }}</span>
-                    </span>
-                  </a>
-                </li>
-              {% endif %}
-
-              <li class="site-nav__item">
-                <a href="/cart" class="site-nav__link site-nav__link--icon cart-link js-drawer-open-right" aria-controls="CartDrawer">
-                  <span class="icon-fallback-text">
-                    <span class="icon icon-cart" aria-hidden="true"></span>
-                    <span class="fallback-text">{{ 'layout.cart.title' | t }}</span>
-                  </span>
-                  <span class="cart-link__bubble{% if cart.item_count > 0 %} cart-link__bubble--visible{% endif %}"></span>
-                </a>
-              </li>
-
-            </ul>
-            <!-- //site-nav -->
-          </div>
-          <div class="grid__item large--hide one-quarter">
-            <div class="site-nav--mobile text-right">
-              <a href="/cart" class="site-nav__link cart-link js-drawer-open-right" aria-controls="CartDrawer">
-                <span class="icon-fallback-text">
-                  <span class="icon icon-cart" aria-hidden="true"></span>
-                  <span class="fallback-text">{{ 'layout.cart.title' | t }}</span>
-                </span>
-                <span class="cart-link__bubble{% if cart.item_count > 0 %} cart-link__bubble--visible{% endif %}"></span>
-              </a>
-            </div>
+            </li>
+          </ul>
+          <!-- //main-nav -->
+          <div class="list-group search-cart-nav">
+            <a class="list-group-item" href="#"><i class="fa fa-search fa-fw fa-flip-horizontal" aria-hidden="true"></i></a>
+            <a href="/cart">Cart (0)</a>
           </div>
         </div>
-
       </div>
     </header>
   </div>
@@ -247,7 +133,7 @@
         "type": "text",
         "id": "logo_max_width",
         "label": "Custom logo width (in pixels)",
-        "default": "180"
+        "default": "60"
       },
       {
         "type": "select",
