--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -81,7 +81,22 @@
   Add the page template as a class for easy page or template specific styling.
 {% endcomment %}
 <body id="{{ page_title | handle }}" class="{% if customer %}customer-logged-in {% endif %}template-{{ template | replace: '.', ' ' | truncatewords: 1, '' | handle }}">
-
+  <div id="CartDrawer" class="drawer drawer--right drawer--has-fixed-footer">
+   <div class="drawer__fixed-header">
+     <div class="drawer__header">
+       <div class="drawer__title">{{ 'cart.general.title' | t }}</div>
+       <div class="drawer__close">
+         <button type="button" class="icon-fallback-text drawer__close-button js-drawer-close">
+           <span class="icon icon-x" aria-hidden="true"></span>
+           <span class="fallback-text">{{ 'cart.general.close_cart' | t }}</span>
+         </button>
+       </div>
+     </div>
+   </div>
+   <div class="drawer__inner">
+     <div id="CartContainer" class="drawer__cart"></div>
+   </div>
+  </div>
   <div id="PageContainer" class="page-container">
     
     {% unless template.name == "index" or template.suffix == "portfolio" %}    
