--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -108,13 +108,13 @@
           </ul>
           <!-- //main-nav -->
           <div class="list-group search-cart-nav">
-            <a href="/search" class="site-nav__link site-nav__link--icon js-toggle-search-modal" data-mfp-src="#SearchModal">
+            <a href="/search" class="list-group-item js-toggle-search-modal" data-mfp-src="#SearchModal">
               <span class="icon-fallback-text">
                 <span class="icon icon-search" aria-hidden="true"></span>
                 <span class="fallback-text">Search</span>
               </span>
             </a>
-            <a href="/cart" class="site-nav__link site-nav__link--icon cart-link js-drawer-open-right" aria-controls="CartDrawer" aria-expanded="false">
+            <a href="/cart" class="cart-link js-drawer-open-right list-group-item" aria-controls="CartDrawer" aria-expanded="false">
               <span href="/cart">Cart ({{ cart.item_count }})</span>
             </a>
           </div>
